@startuml erd

skinparam linetype ortho
hide circle

entity User {
    * user_id: int <<PK>>
    --
    * username: string
    * first_name: string
    * last_name: string
    * email: string
    * password: string
    * access_level: int
    about: string
    profile_picture: blob
    program: string
    uni_year: int
    address: string
}

entity Subscribed {
    * community_id: int <<FK>>
    * user_id: int <<FK>>
}

entity Event {
    * event_id: int <<PK>>
    --
    * title: string
    * description: string
    * date: date
    * virtual_link: string
    * location: string
    * max_capacity: int
    * event_type : string <<FK>>
    * community_id: int <<FK>>
    materials: string
}

entity Community {
    * community_id: int <<PK>>
    --
    * name: string
    * description: string
    * category: string
    * owner_id: int <<FK>>
    community_image: blob
}

entity EventType {
    * name: string <<PK>>
}

entity Post {
    * post_id: int <<PK>>
    --
    * title: string
    * content: string
    * date: date
    * user_id: int <<FK>>
    community_id: int <<FK>>
}

entity SocialType {
    * social_type: string << PK>>
}

entity UserSocial {
    * user_social_id: int <<PK>>
    --
    * social_username
    * social_type: string <<FK>>
    * user_id: int <<FK>>
}

entity CommunityLeader {
    * community_id: int <<FK>>
    * user_id: int <<FK>>
}

entity EventParticipant {
    * event_id: int <<FK>>
    * user_id: int <<FK>>
}

entity Notification {
    * notification_id: int <<PK>>
    --
    * user_id: int <<FK>>
    * message: string
    * timestamp: date
}

entity Comment {
    * comment_id: int <<PK>>
    --
    * post_id: int <<FK>>
    * user_id: int <<FK>>
    * comment: string
    * timestamp: date
}

entity PostLikes {
    * post_id: int <<FK>>
    * user_id: int <<FK>>
}

User ||--o{ Subscribed
User }o-up-o{ Post
User ||--o{ Community
User ||-up-o{ UserSocial
UserSocial }o-left-|| SocialType
CommunityLeader }o-right-|| User
CommunityLeader }o--|| Community
EventParticipant }o--|| Event
EventParticipant }o-left-|| User
Notification }o--|| User
Comment ||--|| User
Comment ||--|| Post

Community }o--o{ Subscribed
Community ||-right-o{ Event

Event ||--|| EventType

PostLikes }o--|| User
PostLikes }o--|| Post

@enduml